# rusty-redfishery

./: Cargo.toml  README.md  test.py
example/: Cargo.toml  cert.pem  key.pem
example/src/: main.rs  tree.rs
examples/: example.rs  test.py
examples/example/: Cargo.toml
redfish-axum/: Cargo.toml
redfish-axum/src/: json.rs  lib.rs
redfish-data/: Cargo.toml
redfish-data/src/: lib.rs
src/: json.rs  lib.rs  main.rs
