[package]
name = "redfish-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
hyper = { version = "0.14.25", features = ["full"] }
mime = "0.3.17"
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["normalize-path"] }
