[package]
name = "redfish-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.10", features = ["macros"] }
bytes = "1.4.0"
http = "0.2.9"
mime = "0.3.17"
serde = "1.0.162"
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["normalize-path"] }
redfish-data = { path = "../redfish-data" }
uuid = { version = "1.3.3", features = ["v4"] }
http-auth-basic = "0.3.3"
async-trait = "0.1.68"
etag = "4.0.0"

[dev-dependencies]
hyper = { version = "0.14.25", features = ["full"] }
